- release 1.0.0 version feature

--- a/app.json
+++ b/app.json
@@ -8,9 +8,13 @@
     "pages/plan/plan",
     "pages/myday/myday",
     "pages/important/important",
-    "pages/index/index",
-    "pages/logs/logs"
+    "pages/index/index"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
