--- a/project.config.json
+++ b/project.config.json
@@ -24,7 +24,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
-	"appid": "wx191e49fa78da996f",
+	"appid": "wxf700f5d06e7b0f98",
 	"projectname": "WeTodos",
 	"debugOptions": {
 		"hidedInDevtools": []
